feat: add Docker setup and fix notebook imports
- Add Dockerfile and docker-compose.yml for containerized Jupyter environment
- Add requirements.txt with all necessary dependencies
- Add Docker README with usage instructions
- Fix unused import (classification_report) in data_exploration notebook

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Br2AtMQ48IST"
       },
@@ -28,7 +14,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.metrics import classification_report, roc_auc_score, confusion_matrix\n",
+        "from sklearn.metrics import roc_auc_score, confusion_matrix\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier, StackingClassifier\n",
         "from imblearn.over_sampling import SMOTE\n",
@@ -37,14 +23,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# load file\n",
-        "fraud = pd.read_csv('/content/drive/MyDrive/fraudTest.csv')\n",
-        "\n",
-        "print(fraud.head())\n",
-        "print(fraud.shape)\n",
-        "print(fraud.info())"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,11 +31,10 @@
         "id": "4TfXdA0q8kaz",
         "outputId": "1fb1b192-39ca-495b-f712-1e71bc8a5856"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "   Unnamed: 0 trans_date_trans_time            cc_num  \\\n",
             "0           0   2020-06-21 12:14:25  2291163933867244   \n",
@@ -135,7 +113,29 @@
             "None\n"
           ]
         }
+      ],
+      "source": [
+        "# load file\n",
+        "fraud = pd.read_csv('/content/drive/MyDrive/fraudTest.csv')\n",
+        "\n",
+        "print(fraud.head())\n",
+        "print(fraud.shape)\n",
+        "print(fraud.info())"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
