DDI-9 add data description

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -121,6 +121,7 @@
         "print(fraud.head())\n",
         "print(fraud.shape)\n",
         "print(fraud.info())"
+        "print(fraud.describe())"
       ]
     }
   ],
