DDI-9 Fix formatting in data exploration notebook

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -120,7 +120,7 @@
         "\n",
         "print(fraud.head())\n",
         "print(fraud.shape)\n",
-        "print(fraud.info())"
+        "print(fraud.info())",
         "print(fraud.describe())"
       ]
     }
